feat: add "HOME" navigation link to article views and fix model validation spacing

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
+<%= link_to "HOME", root_path, style: "border: black solid 1px; padding: 5px; margin-bottom: 10px; display: inline-block"%>
 <h1><%= @article.title %></h1>
-
 <p><%= @article.body %></p>
 
 <ul>
