--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "HOME", root_path, style: "border: black solid 1px; padding: 5px; margin-bottom: 10px; display: inline-block" %>
+
 <h1>Edit Article</h1>
 
 <%= render "form", article: @article %>
