feat: add RSpec setup and basic tests for Article model and system flows
- Integrated `rspec-rails` gem for testing.
- Added system test for article creation flow.
- Created model specs for Article validations.
- Configured RSpec with necessary files.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -48,4 +48,4 @@
   </div>
 <% end %>
 
-<%= link_to "Create new Article", new_article_path, style: "border: black solid 1px; padding: 20px; color: Blue; text-decoration: none; display: inline-block; background-color: gold" %>
+<%= link_to "Create a new article", new_article_path, style: "border: black solid 1px; padding: 20px; color: Blue; text-decoration: none; display: inline-block; background-color: gold" %>
